# eloimx

./: CMakeLists.txt  README.md
asset/: Pebbles_028_BaseColor.jpg:Zone.Identifier  Pebbles_028_Normal.jpg:Zone.Identifier  normal_map.jpg:Zone.Identifier
include/eloimx/: eloimx.h
include/eloimx/bsdfs/: conductor.h  dielectric.h  diffuse.h  mirror.h
include/eloimx/core/: spectrum.h  util.h
include/eloimx/render/: bsdf.h  intersection.h  renderjob.h  scene.h  shape.h  texture.h
include/eloimx/texture/: bitmap.h  constmap.h
src/: CMakeLists.txt  demoJob.cpp
src/bsdfs/: CMakeLists.txt  conductor.cpp  dielectric.cpp  diffuse.cpp  mirror.cpp
src/core/: CMakeLists.txt
src/integrators/: CMakeLists.txt  path.cpp
src/libcore/: math.cpp  util.cpp
src/librender/: shape.cpp
src/render/: CMakeLists.txt  scene.cpp  shape.cpp
src/texture/: CMakeLists.txt  bitmap.cpp  constmap.cpp
