# core
cmake_minimum_required(VERSION 3.13)
add_library(core ./frame.cpp ./math.cpp ./ray.cpp ./spectrum.cpp ./util.cpp warp.cpp)
target_include_directories(core PUBLIC ${PROJECT_INCLUDE_DIR})
target_link_directories(core PUBLIC ${PROJECT_LIB_DIR})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Debug build")
    target_link_libraries(core embree3 fmtd)    
elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
    message(STATUS "Release build")
    target_link_libraries(core embree3 fmt)
endif()